--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Ignore WordPress uploads
-wp-content/uploads/
+# Ignore everything
+/*
 
-# Ignore WordPress config
-wp-config.php
+# Except wp-content
+!/wp-content/
 
 # Ignore system files
 .DS_Store
 Thumbs.db
 
-# Ignore node modules (if using JS packages)
-node_modules/
+# Ignore wp-config (optional, contains DB password)
+wp-config.php
